Fix: Enhanced protection against unwanted widget content (Opus text bug v2)
- Clear widget content at all navigation points
- Add MutationObserver for real-time monitoring
- Clear content in App.js render methods
- Clear content in Routes.js navigate method
- Use both innerHTML and textContent clearing for complete removal

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 
     <!-- Core Application -->
     <script src="src/core/Router.js"></script>
+    <script src="src/core/Routes.js"></script>
     <script src="src/core/App.js"></script>
 </body>
 </html>
